--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
             <h1>Alisa LarchenCoach</h1>
             <p class="maintext">provides guidance to enterpreneurs & families seeking calm, clarity and wisdom to rebuild trust.</p>
             <div class="maintext_comment">
-                <p>She reminds people of their inner beauty in times of outer chaos. Asks deep questions. Helps with presentation and exam anxiety. Provides structure.</p>
+                <p>reminds people of their inner beauty in times of outer chaos. Asks deep questions. Helps with presentation and exam anxiety. Provides structure.</p>
                 <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution based thinking. She is a polymath & a creative nerd who loves to melt hearts with humour, speak and write about Sensitivity, Mindfulness, Art of Choice & the satisfaction of Saying a No, Conflict Resolution & Crisis Management.</p>
+            </div>
+            <div>
+                <p class="maintext_narrow">She has worked in the University of Vienna within math department as a sounding board producer in 2022. Previously, having opened an Art-Therapy studio for motheand children and having worked as an educator in several private schools around Europe, she now dedicates time to consulting business owners, teachers, parents, teens & children on The ABC's of soft skills, time management for hyper sensitive and neurodiverse beings, offering "effort in style" courses and cosching based on the principles of Spiral Dynamics, Attachment Theory and Biochemistry.</p>
             </div>
             <div>
                 <p class="maintext_narrow">She has worked in the University of Vienna within math department as a sounding board producer in 2022. Previously, having opened an Art-Therapy studio for motheand children and having worked as an educator in several private schools around Europe, she now dedicates time to consulting business owners, teachers, parents, teens & children on The ABC's of soft skills, time management for hyper sensitive and neurodiverse beings, offering "effort in style" courses and cosching based on the principles of Spiral Dynamics, Attachment Theory and Biochemistry. Alisa also develops her business start-up and a social enterprise in the field of education. Education is her gift, calling & mission and she sees her "organising innovative educational spaces" for further generations and adults of the now to follow their interests & naturally develop talents".</p>
