--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="flex">
         <div class="column_text">
             <h1>Alisa LarchenCoach</h1>
-            <p class="maintext">provides guidance to enterpreneurs & families seeking calm, clarity and wisdom to rebuild trust.</p>
+            <p class="maintext">provides inspirational education to families with neurodiverse kids seeking calm, clarity and wisdom to build meaningful connection & trust, trainn soft skills & basic emotional awareness, care & focus.</p>
             <div class="maintext_comment">
                 <p>reminds people of their inner beauty in times of outer chaos. Asks deep questions. Helps with presentation and exam anxiety. Provides structure.</p>
                 <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution based thinking. She is a polymath & a creative nerd who loves to melt hearts with humour, speak and write about Sensitivity, Mindfulness, Art of Choice & the satisfaction of Saying a No, Conflict Resolution & Crisis Management.</p>
