--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
     <div class="flex">
         <div class="column_text">
             <h1>Alisa LarchenCoach</h1>
-            <p class="maintext">provides inspirational education to families with neurodiverse kids seeking calm, clarity and wisdom to build meaningful connection & trust, trainn soft skills & basic emotional awareness, care & focus.</p>
+            <p class="maintext">provides inspirational education to individuals & families with kids seeking clarity and wisdom to build meaningful connections & trust, train soft skills, care & focus.</p>
             <div class="maintext_comment">
-                <p>reminds people of their inner beauty in times of outer chaos. Asks deep questions. Helps with presentation and exam anxiety. Provides structure.</p>
-                <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution based thinking. She is a polymath & a creative nerd who loves to melt hearts with humour, speak and write about Sensitivity, Mindfulness, Art of Choice & the satisfaction of Saying a No, Conflict Resolution & Crisis Management.</p>
+                <p>She reminds people of their inner beauty in times of outer chaos. Asks deep questions. Helps with presentation and exam anxiety. Provides structure.</p>
+                <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution based thinking. She is a polymath & a creative nerd who loves to melt hearts with humour. She speaks and writes about Sensitivity, Mindfulness & the Art of Choice.</p>
             </div>
             <div>
-                <p>She has worked in the University of Vienna within math department as a sounding board producer in 2022. Previously, having opened an Art-Therapy studio for motheand children and having worked as an educator in several private schools around Europe, she now dedicates time to consulting on The ABC's of soft skills & time management sensitive neurodiverse beings, offering courses based on the Laws of Nature & scientific principles.</p>
+                <p>Alisa has worked in the University of Vienna within math department as a sounding board producer in 2022. Previously, having opened an 2 Art-Therapy studios & gaining experience as an educator in private schools, kindergardens and universities around Europe, she now dedicates her time to writing and consulting on The ABC's of feelings, soft skills & time management for sensitive parents, offering individual and group courses.</p>
             </div>
             <div>
-                <p>Alisa also develops her business start-up and a social enterprise in the field of education. Education is her gift, calling & mission and she sees her "organising innovative educational spaces" for further generations and adults of the now to follow their interests & naturally develop talents".</p>
+                <p>Alisa also develops her start-up in the field of edutech. Education is her gift, technology and physics is a calling, while her mission she sees in organising innovative educational spaces for further generations and genius adults of the now who seek library-like surroundings to find calm, quiet and follow their interests to naturally develop Mastery.</p>
             </div>
             <p class="maintext">Connect & book a BRAINSTORMING session or a STRATEGIC MASTERMIND for fresh direction & inspiration, especially if you or your family and team need unexpected fresh ideas & visions.</p>
             <div class="maintext_comment">
