--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <p class="maintext">provides inspirational education to individuals & families with kids seeking clarity and wisdom to build meaningful connections & trust, train soft skills, care & focus.</p>
             <div class="maintext_comment">
                 <p>She reminds people of their inner beauty in times of outer chaos. Asks deep questions. Helps with presentation and exam anxiety. Provides structure.</p>
-                <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution based thinking. She is a polymath & a creative nerd who loves to melt hearts with humour. She speaks and writes about Sensitivity, Mindfulness & the Art of Choice.</p>
+                <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution based thinking. She is a polymath & a creative nerd who loves to melt hearts with humour.</p>
+                <p>She speaks and writes about Sensitivity, Mindfulness & the Art of Choice.</p>
                 <p>Alisa has worked in the University of Vienna within math department as a sounding board producer in 2022. Previously, she has been studying psychotherapy & gaining experience as an educator in public & private schools, kindergartens and universities around Europe working as a heuristic social pedagogue, producer, coach, art therapist and tutor.</p>
                 <p>She has opened her first art-therapy studio in Kyin in 2015 and a second one in 2020.</p>
                 <p>Now, she dedicates her time to writing scientific articles and consults people in 3 languages - Ukraininan, Russian and English.</p>
