--- a/index.html
+++ b/index.html
@@ -45,15 +45,18 @@
                 <p>Telegram: <a href="https://t.me/lissenx" target="\_blank" title="Telegram Public">alisa special agent fairy</a></p>
             </div>
             <div class="maintext_comment">
-                <p>Alisa has worked in the University of Vienna within math department as a sounding board producer in 2022.</p>
-                <p>Previously, she has been studying psychotherapy & gaining experience as an educator in public & private schools, kindergartens and universities around Europe working as a heuristic social pedagogue, producer, coach, art therapist and tutor.</p>
+    <section>
+    </section>
+                 <h1>Background</h1>
+            <p class="maintext"><p>Alisa also develops her start-up in the field of edutech. Education is her gift, technology is a calling, while she sees her mission in organising innovative educational spaces for both - further generations as well as genius adults of the now who seek library-like surroundings to enjoy the quiet & follow their interests that inevitably leads to natural development of Mastery.</p>
+                <p>Sha has worked in the University of Vienna within math department of math as a sounding board producer in 2022.</p>
+                <p>Previously, she has been studying psychotherapy & gaining experience as an educator in public & private schools, kindergartens and universities around Europe working as a social pedagogue, producer, coach, art therapist and tutor.</p>
                 <p>She has opened her first art-therapy studio in Kyin in 2015 and a second one in 2020.</p>
                 <p>Now, she dedicates her time to writing scientific articles and consults people in 3 languages - Ukraininan, Russian and English.</p>
-                <p>Her course "The ABC's of feelings" is designed for seekers - usually parents - who wish to learn more about personal effort & time management, distractions, how to avoid burn-out and prevent their child's teenage depression, and just do their best to help kids succeed in life.</p>
-                <p>Usually, Alisa's clients first become her friends and then she adds a little extra something - be it her time, patience or expertise - after which mums, paps & kids actually start feeling heard and seen with all their emotions, needs and dreams.</p>
+                <p>Her course "The ABC's of feelings" is designed for seekers - usually parents - who wish to learn more about personal effort & time management. Dealing with distractions, conflict management, burn-out and preventing depression is what Alisa is best at. She wishes for all kids to succeed in their lives!</p>
+                <p>Usually, Alisa's clients first become her friends and then she adds a little extra something - be it her time, patience or expertise - after which mums, paps & kids actually start seeing more clearly, feeling heard with all their emotions, needs and dreams.</p>
                 <p>Only when there is an emotionally safe environment in the family can children truly learn...</p>
-                <p>Alisa also develops her start-up in the field of edutech. Education is her gift, technology is a calling, while she sees her mission in organising innovative educational spaces for both - further generations as well as genius adults of the now who seek library-like surroundings to enjoy the quiet & follow their interests that inevitably leads to natural development of Mastery.</p>
-            </div>
+                </div>
     </section>
 </body>
 </html>
