--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p class="maintext">provides inspirational education to individuals & families with kids seeking clarity and wisdom to build meaningful connections & trust, train soft skills, care & focus.</p>
             <div class="maintext_comment">
                 <p>She reminds people of their inner beauty in times of outer chaos. Asks deep questions. Helps with presentation and exam anxiety. Provides structure.</p>
-                <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution based thinking. She is a polymath & a creative nerd who loves to melt hearts with humour.</p>
+                <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution oriented thinking. She is a polymath & a creative nerd who loves to melt hearts with humour.</p>
                 <p>She speaks and writes about Sensitivity, Mindfulness & the Art of Choice.</p>
                 </div>
             <p class="maintext">Connect & book a BRAINSTORMING session or a STRATEGIC MASTERMIND for fresh direction & inspiration, especially if you or your family and team need unexpected fresh ideas & visions.</p>
