--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution oriented thinking. She is a polymath & a creative nerd who loves to melt hearts with humour.</p>
                 <p>She speaks and writes about Sensitivity, Mindfulness & the Art of Choice.</p>
                 </div>
-            <p class="maintext">Connect & book a BRAINSTORMING session or a STRATEGIC MASTERMIND for fresh direction & inspiration, especially if you or your family and team need unexpected fresh ideas & visions.</p>
+            <p class="maintext">Connect & book a BRAINSTORMING session or a STRATEGIC MASTERMIND, especially if you or your family and team need unexpected ideas & refreshing honesty.</p>
             <div class="maintext_comment">
             <div class="maintext_comment">
             <div style="padding: 2px 30px 7px;">
