--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                 <p>She reminds people of their inner beauty in times of outer chaos. Asks deep questions. Helps with presentation and exam anxiety. Provides structure.</p>
                 <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution oriented thinking. She is a polymath & a creative nerd who loves to melt hearts with humour.</p>
                 <p>She speaks and writes about Sensitivity, Mindfulness & the Art of Choice.</p>
+                <p>Alisa also develops her start-up in the field of edutech.</p>
+                <p>Education is her gift, technology is a calling, while she sees her mission in organising innovative educational spaces for both - further generations as well as genius adults of the now who seek library-like surroundings to enjoy the quiet & follow their interests to unleash the natural unfolding of Mastery.</p>
                 </div>
             <p class="maintext">Connect & book a BRAINSTORMING session or a STRATEGIC MASTERMIND, especially if you or your family and team need unexpected ideas & refreshing honesty.</p>
             <div class="maintext_comment">
@@ -45,17 +47,20 @@
                 <p>Telegram: <a href="https://t.me/lissenx" target="\_blank" title="Telegram Public">alisa special agent fairy</a></p>
             </div>
             <div class="maintext_comment">
+            <div>
     <section>
     </section>
-                 <h1>Background</h1>
-            <p class="maintext"><p>Alisa also develops her start-up in the field of edutech. Education is her gift, technology is a calling, while she sees her mission in organising innovative educational spaces for both - further generations as well as genius adults of the now who seek library-like surroundings to enjoy the quiet & follow their interests that inevitably leads to natural development of Mastery.</p>
-                <p>Sha has worked in the University of Vienna within math department of math as a sounding board producer in 2022.</p>
+            </div>
+                 <h1>Professional background</h1>
+                <p>Alisa has worked in the University of Vienna within math department of math as a sounding board producer in 2022.</p>
                 <p>Previously, she has been studying psychotherapy & gaining experience as an educator in public & private schools, kindergartens and universities around Europe working as a social pedagogue, producer, coach, art therapist and tutor.</p>
                 <p>She has opened her first art-therapy studio in Kyin in 2015 and a second one in 2020.</p>
-                <p>Now, she dedicates her time to writing scientific articles and consults people in 3 languages - Ukraininan, Russian and English.</p>
-                <p>Her course "The ABC's of feelings" is designed for seekers - usually parents - who wish to learn more about personal effort & time management. Dealing with distractions, conflict management, burn-out and preventing depression is what Alisa is best at. She wishes for all kids to succeed in their lives!</p>
-                <p>Usually, Alisa's clients first become her friends and then she adds a little extra something - be it her time, patience or expertise - after which mums, paps & kids actually start seeing more clearly, feeling heard with all their emotions, needs and dreams.</p>
-                <p>Only when there is an emotionally safe environment in the family can children truly learn...</p>
+                <p>Now, she dedicates her time to writing scientific articles and consulting people in 3 languages, Ukraininan, Russian and English.</p>
+                <p>Her course "The ABC's of feelings" is designed for seekers /usually parents/ - who wish to learn more about personal effort & time management.
+                <p>Who are dealing with distractions, crisis, conflict, burn-out and depression. Alisa is best at providing holistic care and inspiring change that has been long awaited. She wishes for all kids to succeed in Life and comes around when most needed, s a warm breeze of inevitable transformation, supporting growth of new neuro pathways, habits, rituals and soft skills.</p>
+                <p>Usually, Alisa's clients first become her friends & only after that does she add her powerful extra something - be it her time, kindness, playfulness, patience or expertise - which makes mums, paps & kids actually start seeing and sensing themselves more clearly, feeling heard with all their emotions, needs and dreams and just landing softly in the present moment, exploring it's vast depths.</p>
+                <p>Only when there is an emotionally safe environment in the family and the surrounding allows mistakes in the name of inventions and cretivity can children truly learn!</p>
+                <p>With love & grace, A.</p>
                 </div>
     </section>
 </body>
