--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
                 <p>Education is her gift, technology is a calling, while she sees her mission in organising innovative educational spaces for both - further generations as well as genius adults of the now who seek library-like surroundings to enjoy the quiet & follow their interests to unleash the natural unfolding of Mastery.</p>
                 </div>
             <p class="maintext">Connect & book a BRAINSTORMING session or a STRATEGIC MASTERMIND, especially if you or your family and team need unexpected ideas & refreshing honesty.</p>
-            <div class="maintext_comment">
-            <div class="maintext_comment">
             <div style="padding: 2px 30px 7px;">
                 <p><a href="tel:+35797658958"><b class="mark">+357 97 658 958</b></a> (WhatsApp)</p>
             </div>
@@ -46,13 +44,15 @@
                 <p>Instagram: <a href="https://www.instagram.com/alisa.polymath/" target="\_blank" title="Instagram Profile">alisa.polymath</a></p>
                 <p>Telegram: <a href="https://t.me/lissenx" target="\_blank" title="Telegram Public">alisa special agent fairy</a></p>
             </div>
-            <div class="maintext_comment">
-            <div>
-    <section>
+             <div>
+                   <section id="header" class="bg">
+        <h2>SOFT SKILLS FOR LIFE AND ORGANISATIONAL CULTURE</h2>
     </section>
             </div>
-                 <h1>Professional background</h1>
-                <p>Alisa has worked in the University of Vienna within math department of math as a sounding board producer in 2022.</p>
+            <div class="maintext_comment">
+                 
+                <h1>Professional background</h1>
+                <p>Alisa has worked in the University of Vienna within the department of math as a sounding board producer in 2022.</p>
                 <p>Previously, she has been studying psychotherapy & gaining experience as an educator in public & private schools, kindergartens and universities around Europe working as a social pedagogue, producer, coach, art therapist and tutor.</p>
                 <p>She has opened her first art-therapy studio in Kyin in 2015 and a second one in 2020.</p>
                 <p>Now, she dedicates her time to writing scientific articles and consulting people in 3 languages, Ukraininan, Russian and English.</p>
