--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
              <div>
                    <section id="header" class="bg">
         <h2>SOFT SKILLS FOR LIFE AND ORGANISATIONAL CULTURE</h2>
+                       <p><a href="tel:+35797658958"><b class="mark">+357 97 658 958</b></a> (WhatsApp)</p>
     </section>
             </div>
             <div class="maintext_comment">
