--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                  
                 <h1>Professional background</h1>
                 <p>Alisa has worked in the University of Vienna within the department of math as a sounding board producer in 2022.</p>
-                <p>Previously, she has been studying psychotherapy & gaining experience as an educator in public & private schools, kindergartens and universities around Europe working as a social pedagogue, producer, coach, art therapist and tutor.</p>
+                <p>Previously, she has been studying psychotherapy & gaining experience as an educator in public & private schools & kindergartens around Europe working as a social pedagogue, producer, coach, art therapist and tutor.</p>
                 <p>She has opened her first art-therapy studio in Kyin in 2015 and a second one in 2020.</p>
                 <p>Now, she dedicates her time to writing scientific articles and consulting people in 3 languages, Ukraininan, Russian and English.</p>
                 <p>Her course "The ABC's of feelings" is designed for seekers - usually parents - who wish to find answers as well as practice effort & time management to help their kids deal with everyday life challenges.</p>
