--- a/index.html
+++ b/index.html
@@ -56,14 +56,12 @@
                 <p>Previously, she has been studying psychotherapy & gaining experience as an educator in public & private schools & kindergartens around Europe working as a social pedagogue, producer, coach, art therapist and tutor.</p>
                 <p>She has opened her first art-therapy studio in Kyin in 2015 and a second one in 2020.</p>
                 <p>Now, she dedicates her time to writing scientific articles and consulting people in 3 languages, Ukraininan, Russian and English.</p>
-                <p>Her course "The ABC's of feelings" is designed for seekers - usually parents - who wish to find answers as well as practice effort & time management to help their kids deal with everyday life challenges.</p>
-                <p>People who are dealing with ADHD, stress, anger disorders, distractions, crisis, conflict, burn-out and depression often gain emotional clarity and sustainable effective results after working with Alisa.</p>
-                <p>She is best at providing holistic care and inspiring change that has been long awaited.</p>
-                <p>She wishes for all kids to succeed in life and usually comes around when most needed, bringing a swarm of innovative ideas that serve the family, the business and especially the individual, providing him/her/them with growth of new neuro-pathways, habits, rituals and soft skills that truly matter.</p>
-                <p>First, her new clients become her friends & only then, does Alisa start working with a child. She likes to add a little special something - be it her kindness, playfulness or patience when addressing the needs of a group, observing the communication between them and exactly this makes mums, paps & kids actually feel heard & sense themselves more freely, which is a huge step to overall wellbeing.</p>
-                <p>Later, this skill enables an ability to experience & express all given emotions and easily switch and regulate one's own life with it's vastness & depth.</p>
-                <p>Only when there is an emotionally safe environment, when the family and the surrounding allow for a mistake in the name of invention and cretivity - can children truly learn!</p>
-                <p>With love & grace, A.</p>
+                <p>Her course "The ABC's of feelings" is designed for seekers - usually parents - who wish to find answers and help their kids deal with everyday life challenges. She wishes for every kid succeeds in life!</p>
+                <p>People who are dealing with a crisis, a conflict, burn-out or depression, have neurodiverse children with ADHD, anger disorders & unmanageable emotions often gain clarity and sustainable results after working with Alisa.</p>
+                <p>She is best at providing holistic care and inspiring change that has been long awaited and - just as a Fairy Godmother or Mary Poppins - usually comes around when most needed, bringing a swarm of innovative ideas that serve the family, the business and especially the individual, providing him/her/them with growth of new neuro-pathways, habits, rituals and soft skills that truly matter.</p>
+                <p>First, her new clients become her friends. Her kindness, playfulness & patience somehow miraculously makes mums, paps & kids actually feel heard & sense themselves more freely, which is a huge step to overall wellbeing.</p>
+                <p>Later, this soft skill enables an lifelong ability to experience & express all given emotions, easily regulate them and therefore, becone happy in one's own life with it's contrasts, vastness & depth.</p>
+                <p>Only when there is an emotionally safe environment - when the family and the surrounding allow for a mistake in the name of invention and cretivity - can a human truly think, explore, learn and Know Thyself!</p>
                 </div>
     </section>
 </body>
