--- a/index.html
+++ b/index.html
@@ -33,14 +33,13 @@
                 <p>She speaks and writes about Sensitivity, Mindfulness & the Art of Choice.</p>
                 <p>Alisa also develops her start-up in the field of edutech.</p>
             </div>
-            <p class="maintext">Connect & book a BRAINSTORMING session or a STRATEGIC MASTERMIND, especially if you or your family and team need unexpected ideas & refreshing honesty.</p>
-            <div style="padding: 2px 30px 7px;">
-                <p><a href="tel:+35797658958"><b class="mark">+357 97 658 958</b></a> (WhatsApp)</p>
-            </div>
              <div>
                    <section id="header" class="bg">
-        <h2>SOFT SKILLS FOR LIFE AND ORGANISATIONAL CULTURE</h2>
+        <h2>Connect & book a BRAINSTORMING session, a STRATEGIC MASTERMIND or a GROUP TRAINING, especially if you or your family and team need unexpected ideas & refreshing honesty & community management.</h2>
                        <div style="padding-left: 30px;">
+                           <div style="padding: 2px 30px 7px;">
+                <p><a href="tel:+35797658958"><b class="mark">+357 97 658 958</b></a> (WhatsApp)</p>
+                           </div>
                 <p>LinkedIn: <a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
                 <p>FaceBook: <a href="https://www.facebook.com/alisalarchencoach/" target="\_blank" title="FaceBook Profile">alisalarchencoach</a></p>
                 <p>Instagram: <a href="https://www.instagram.com/alisa.polymath/" target="\_blank" title="Instagram Profile">alisa.polymath</a></p>
