--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
              <div>
                    <section id="header" class="bg">
-        <h2>Connect & book a BRAINSTORMING session, a STRATEGIC MASTERMIND or a GROUP TRAINING, especially if you or your family and team need unexpected ideas & refreshing honesty.</h2>
+        <h1>Connect to have a BRAINSTORMING session, a STRATEGIC MASTERMIND if you or your family and team need unexpected ideas & refreshing honesty.</h3>
                        <div style="padding-left: 30px;">
                            <div style="padding: 2px 30px 7px;">
                 <p><a href="tel:+35797658958"><b class="mark">+357 97 658 958</b></a> (WhatsApp)</p>
