--- a/index.html
+++ b/index.html
@@ -35,21 +35,19 @@
             </div>
              <div>
                    <section id="header" class="bg">
-        <h1>Connect to have a BRAINSTORMING session, a STRATEGIC MASTERMIND if you or your family and team need unexpected ideas & refreshing honesty.</h3>
-                       <div style="padding-left: 30px;">
-                           <div style="padding: 2px 30px 7px;">
-                <p><a href="tel:+35797658958"><b class="mark">+357 97 658 958</b></a> (WhatsApp)</p>
+        <h1>Connect & get a brief 30' BRAINSTORMING session to enjoy unexpected ideas or book a 2,5h STRATEGIC MASTERMIND if your family and team need some refreshing honesty.</h1>
+                <p>WhatsApp<a href="tel:+35797658958"><b class="mark">+357 97 658 958</b></a></p>
                            </div>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
-                <p>FaceBook: <a href="https://www.facebook.com/alisalarchencoach/" target="\_blank" title="FaceBook Profile">alisalarchencoach</a></p>
-                <p>Instagram: <a href="https://www.instagram.com/alisa.polymath/" target="\_blank" title="Instagram Profile">alisa.polymath</a></p>
-                <p>Telegram: <a href="https://t.me/lissenx" target="\_blank" title="Telegram Public">alisa special agent fairy</a></p>
+                <p>LinkedIn <a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
+                <p>FaceBook <a href="https://www.facebook.com/alisalarchencoach/" target="\_blank" title="FaceBook Profile">alisalarchencoach</a></p>
+                <p>Instagram <a href="https://www.instagram.com/alisa.polymath/" target="\_blank" title="Instagram Profile">alisa.polymath</a></p>
+                <p>Telegram <a href="https://t.me/lissenx" target="\_blank" title="Telegram Public">alisa special agent fairy</a></p>
             </div>
     </section>
             </div>
             <div class="maintext_comment">
                  
-                <h1>Professional background</h1>
+                <h0>Professional background</h0>
                 <p>Alisa has worked in the University of Vienna within the department of math as a sounding board producer in 2022.</p>
                 <p>Previously, she has been studying psychotherapy & gaining experience as an educator in public & private schools & kindergartens around Europe working as a social pedagogue, producer, coach, art therapist and tutor.</p>
                 <p>She has opened her first art-therapy studio in Kyin in 2015 and a second one in 2020.</p>
